--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-            </plugin>
+                <version>3.5.1</version>
+                 <configuration>
+                     <source>11</source>
+                     <target>11</target>
+                 </configuration>
+                 </plugin>
         </plugins>
     </build>
 
@@ -30,9 +34,5 @@
         </dependency>
 
     </dependencies>
-<properties>
-     <maven.compiler.source>11</maven.compiler.source>
-     <maven.compiler.target>11</maven.compiler.target>
-</properties>
 
 </project>
